dnl
dnl Configure template for GSTI
dnl
dnl (Process this file with autoconf to produce a configure script.)
AC_REVISION($Revision$)dnl
AC_PREREQ(2.13)

AC_INIT(src/gsti.h)
AM_CONFIG_HEADER(config.h)

dnl
dnl The version number goes here
dnl
AM_INIT_AUTOMAKE(gsti,0.2.0)


dnl
dnl Checks for programs
dnl
AC_ARG_PROGRAM

dnl Don't default to build static libs
AM_PROG_LIBTOOL

if test "$GCC" = yes; then
    CFLAGS="$CFLAGS -Wall -Wcast-align -Wshadow -Wstrict-prototypes"
fi


dnl
dnl Checks for libraries
dnl

dnl
dnl Checks for header files
dnl


dnl
dnl Checks for typedefs and structures
dnl

dnl
dnl Checks for compiler features
dnl

dnl
dnl Checks for library functions
dnl

AM_PATH_LIBGCRYPT(1.1.8,,
   AC_MSG_ERROR([[
*** Test for gcrypt failed. You may want to download it from
***        ftp://ftp.gnupg.org/gcrypt/devel/libgcrypt-1.1.x.tar.gz
  ]]))
dnl
dnl Checks for system services
dnl

dnl
dnl Make the version number in src/gsti.h is the same as the one here.
dnl (this is easier than to have a .in file just for one substitution)
dnl
GNUPG_FIX_HDR_VERSION(src/gsti.h, GSTI_VERSION)


AC_OUTPUT_COMMANDS([
chmod +x src/gsti-config
])

AC_OUTPUT([
Makefile
src/Makefile
src/gsti-config
examples/Makefile
])

dnl *-*wedit:notab*-*  Please keep this as the last line.
